[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/enemy/boss/Boss1/Boss1Clouds.gd" type="Script" id=1]
[ext_resource path="res://graphics/environment/boss1clouds/boss1clouds1.png" type="Texture" id=2]
[ext_resource path="res://graphics/environment/boss1clouds/boss1clouds2.png" type="Texture" id=3]
[ext_resource path="res://graphics/environment/boss1clouds/boss1clouds3.png" type="Texture" id=4]
[ext_resource path="res://graphics/environment/boss1clouds/boss1clouds4.png" type="Texture" id=5]
[ext_resource path="res://graphics/environment/boss1clouds/boss1clouds5.png" type="Texture" id=6]
[ext_resource path="res://graphics/environment/boss1clouds/boss1clouds6.png" type="Texture" id=7]




[node name="Boss1Clouds" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
pausado = true
scrollDown = 20

[node name="Cloud1" type="KinematicBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="Sprite" type="Sprite" parent="Cloud1" index="0"]

modulate = Color( 1, 1, 1, 0.490196 )
z_index = 3
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Visibility", "Z Index" ]

[node name="Cloud2" type="KinematicBody2D" parent="." index="1"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="Sprite" type="Sprite" parent="Cloud2" index="0"]

modulate = Color( 1, 1, 1, 0.490196 )
z_index = 3
texture = ExtResource( 3 )
_sections_unfolded = [ "Material", "Visibility", "Z Index" ]

[node name="Cloud3" type="KinematicBody2D" parent="." index="2"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="Sprite" type="Sprite" parent="Cloud3" index="0"]

modulate = Color( 1, 1, 1, 0.490196 )
z_index = 3
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="Cloud4" type="KinematicBody2D" parent="." index="3"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="Sprite" type="Sprite" parent="Cloud4" index="0"]

modulate = Color( 1, 1, 1, 0.490196 )
z_index = 3
texture = ExtResource( 5 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="Cloud5" type="KinematicBody2D" parent="." index="4"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="Sprite" type="Sprite" parent="Cloud5" index="0"]

modulate = Color( 1, 1, 1, 0.490196 )
z_index = 2
texture = ExtResource( 6 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Cloud5" index="1"]

position = Vector2( -0.131507, -77.4504 )
scale = Vector2( 14.3338, 4.63574 )
rect = Rect2( -10, -10, 20, 20 )

[node name="Cloud6" type="KinematicBody2D" parent="." index="5"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="Sprite" type="Sprite" parent="Cloud6" index="0"]

modulate = Color( 1, 1, 1, 0.490196 )
z_index = 2
texture = ExtResource( 7 )
_sections_unfolded = [ "Material", "Visibility", "Z Index" ]

[connection signal="screen_exited" from="Cloud5/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


